Programa 1/adder.jj
/* adder.jj Para tokenizer*/

options{	
			STATIC=false;
		}
// Bloque de instrucciones para definir el Parser		
PARSER_BEGIN(adder)
class adder{
			public static void main(String[]args)
			throws ParseException, TokenMgrError{
			adder parser=new adder(System.in);
			parser.Start();										
				}
		}			
PARSER_END(adder)

//Inicio de estados léxicos

SKIP:{" " | "\n" | "\r" | "\r\n" | "\t"}


//Token para identificadores de usuario
TOKEN:{
	//<IDREACH:"public "|"private "|"protected " > {System.out.println("IDREACH->"+image+"\r\n");}
	<IDENTIFIER:["a"-"z","A"-"Z"] (["a"-"z","A"-"Z","0"-"9","_"])*>{System.out.println("IDENTIFIER ->"+image+"\r\n");}
	|<STRING : ["a"-"z","A"-"Z","0"-"9"](["a"-"z","A"-"Z","0"-"9"])*>{System.out.print("STRING -> "+image+"\r\n");}
	| <NUMBER : (["0"-"9"])+ > {System.out.print("NUM-> "+image+"\r\n");}
	}

	
	//Tokens de tipos de numeros
TOKEN:{
		<NUMTYPES:("int "|"byte "|"short "|"long "|"sbyte "|"ushort "|"ulong ")>{System.out.println("NUMTYPES-> "+image+"\r\n");}
		|<FLOATTYPE:("float "|"double "|"decimal ")>{System.out.println("FLOATTYPE-> "+image+"\r\n");}
		|<BOOLTYPE:"true "|"false ">{System.out.println("BOOLTYPE-> "+image+"\r\n");}
	}
	
TOKEN:
{
	<PROGRAM: "program " > {System.out.println("PROGRAM->"+image);}
	| <MAIN:"public static void main() "> {System.out.println("MAIN->"+image);}
	

}
//Tokens de símbolos
TOKEN:
{
	<LPAR:"(">{System.out.println("LPAR->"+image);}
	| <RPAR:")">{System.out.println("RPAR->"+image);}
	| <LBRACE:"{">{System.out.println("LBRACE->"+image);}
	| <RBRACE:"}">{System.out.println("RBRACE->"+image);}
	| <SEMICOLON:";">{System.out.println("SEMICOL->"+image);}
}

//Tokens para bloques repetitivos, control de flujo
TOKEN:{
	<FOR:"for ">{System.out.println("FORLOOP-> "+image+"\r\n");}
	| <DO:"do ">{System.out.println("DOLOOP-> "+image+"\r\n");}
	|<WHILE:"while ">{System.out.println("WHILELOOP-> "+image+"\r\n");}	
}

//Tokens para operadores aritmeticos
TOKEN:{
	<EQUALS:"= ">{System.out.println("EQUALS-> "+image+"\r\n");}
	|<SUM:"+ ">{System.out.println("SUM-> "+image+"\r\n");}
	|<MINUS:"- ">{System.out.println("MINUS-> "+image+"\r\n");}
	|<MULT:"* ">{System.out.println("MULT->"+image+"\r\n");}
	|<DIVIDE:"/ ">{System.out.println("DIVIDE-> "+image+"\r\n");}
}

//Tokens de operadores relacionales
TOKEN:{
	<AND:"&& " >{System.out.println("AND-> "+image+"\r\n");}
	|<OR:"|| " >{System.out.println("OR-> "+image+"\r\n");}
	|<SAMEAS:"== " >{System.out.println("SAMEAS-> "+image+"\r\n");}
	|<GREATER:"> " >{System.out.println("GREATER-> "+image+"\r\n");}
	|<LESSER:"< " >{System.out.println("LESSER-> "+image+"\r\n");}
	|<GREATSAME:">= " >{System.out.println("GREATSAME-> "+image+"\r\n");}
	|<LESSAME:"<= " >{System.out.println("LESSAME-> "+image+"\r\n");}
	|<DIFFERENT:"<> " >{System.out.println("DIFFERENT-> "+image+"\r\n");}
}



//Fin de estados léxicos

//Inicio de procedimientos para definir patrones
void Start():
{}
{
	//Sentence()|NumberTypes()|Symbols()|Loops()|AritmOp()|RelatOp()
	Block()
}

void Block():
{}
{
	Main()
}

void Main():
{}
{
	<MAIN>
	<LBRACE>Sentence()<RBRACE>
}

void Sentence():
{}
{
	<NUMBER> 
	|<IDENTIFIER>
	|<EOF>
}

void NumberTypes():
{}
{
	<NUMTYPES> | <FLOATTYPE> | <BOOLTYPE>	
}

void Symbols():
{}
{
	<LPAR>|<RPAR>|<LBRACE>|<RBRACE>|<SEMICOLON>
}

void Loops():
{}
{
	<FOR> | <DO> | <WHILE>
}

void AritmOp():
{}
{
	<EQUALS>|<SUM>|<MINUS>|<MULT>|<DIVIDE>
}

void RelatOp():
{}
{
	<AND>|<OR>|<SAMEAS>|<GREATER>|<LESSER>|<GREATSAME>|<LESSAME>|<DIFFERENT>
}
